Начал добавлять JS

--- a/app/css/form_elements.css
+++ b/app/css/form_elements.css
@@ -60,6 +60,7 @@ input, textarea, button {
     color: #48cbe8;
     border: 1px solid rgb(72, 203, 232);
     border-radius: 4px;
+}
 .error-mes{
 	background-color: #fad2d1;
 	border-color: #f97e76;
@@ -80,3 +81,77 @@ input, textarea, button {
 	border-color: #49bb7b;
 	color: #49bb7b;
 }
+/* placeholder */
+*::-webkit-input-placeholder {
+    color: #48cbe8;
+}
+*:-moz-placeholder {
+    /* FF 4-18 */
+    color: #48cbe8;
+}
+*::-moz-placeholder {
+    /* FF 19+ */
+    color: #48cbe8;
+}
+*:-ms-input-placeholder {
+    /* IE 10+ */
+    color: #48cbe8;
+}
+
+/* _____________ плавное изменение прозрачности  placeholder-а при фокусе _________ */
+.input::-webkit-input-placeholder       {opacity: 1; transition: opacity 0.4s ease;}
+.input::-moz-placeholder                {opacity: 1; transition: opacity 0.4s ease;}
+.input:-moz-placeholder                 {opacity: 1; transition: opacity 0.4s ease;}
+.input:-ms-input-placeholder            {opacity: 1; transition: opacity 0.4s ease;}
+.input:focus::-webkit-input-placeholder {opacity: 0; transition: opacity 0.4s ease;}
+.input:focus::-moz-placeholder          {opacity: 0; transition: opacity 0.4s ease;}
+.input:focus:-moz-placeholder           {opacity: 0; transition: opacity 0.4s ease;}
+.input:focus:-ms-input-placeholder      {opacity: 0; transition: opacity 0.4s ease;}
+
+.textarea::-webkit-input-placeholder       {opacity: 1; transition: opacity 0.4s ease;}
+.textarea::-moz-placeholder                {opacity: 1; transition: opacity 0.4s ease;}
+.textarea:-moz-placeholder                 {opacity: 1; transition: opacity 0.4s ease;}
+.textarea:-ms-input-placeholder            {opacity: 1; transition: opacity 0.4s ease;}
+.textarea:focus::-webkit-input-placeholder {opacity: 0; transition: opacity 0.4s ease;}
+.textarea:focus::-moz-placeholder          {opacity: 0; transition: opacity 0.4s ease;}
+.textarea:focus:-moz-placeholder           {opacity: 0; transition: opacity 0.4s ease;}
+.textarea:focus:-ms-input-placeholder      {opacity: 0; transition: opacity 0.4s ease;}
+/* _____________ // Элементы форм _________ */
+
+
+/* _____________ // file upload _________ */
+.fileupload-wrapper {
+  width: 100%;
+  position: relative;
+}
+.fileupload-lable{
+	display: block;
+  width: 52px;
+  height: 41px;
+	position: absolute;
+  right: 0;
+	background: url(../img/upload-icon.png) 10px 7px no-repeat;
+	background-color: #48cbe8;
+	border-radius: 0 4px 4px 0;
+}
+.fileupload{ /* хак, взятый из html5boilerplate */
+	border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+/* _____________ // file upload end _________ */
+/* _____________ тултипы _________ */
+.qtip-mystyle{
+	background-color: #f97e76;
+	border-color: #f97e76;
+	font-family: 'fira_sansbook';
+	color: #ffffff;
+	font-size: 13px;
+}
+/* _____________ // тултипы _________ */
